--- a/src/styles/reset.css
+++ b/src/styles/reset.css
@@ -1,22 +1,23 @@
-
-*{
-  margin: 0;
+* {
+  margin : 0;
   padding: 0;
   /*防止点击闪烁*/
   -webkit-tap-highlight-color: transparent;
   /*缩放网页，文字大小不变*/
   -webkit-text-size-adjust: none;
-  font-family: "Helvetica Neue",Helvetica,STHeiTi,sans-serif;
-  -webkit-font-smoothing: antialiased;
-  box-sizing: border-box;
-  font-weight: normal;
+  font-family             : "Helvetica Neue", Helvetica, STHeiTi, sans-serif;
+  -webkit-font-smoothing  : antialiased;
+  box-sizing              : border-box;
+  font-weight             : normal;
   /* 解决passive 问题 */
-  touch-action: pan-y;
+  touch-action: pan-x pan-y;
+
 }
+
 /*修复img默认位置和IE边框*/
-img{
+img {
   vertical-align: top;
-  border:none;
+  border        : none;
   /* 修正viewport-unit-buggyfill带来的影响
   比如img和伪元素::before(:before)或::after（:after）。
   在img中content会引起部分浏览器下，图片不会显示。 */
@@ -25,53 +26,76 @@ img{
 }
 
 /*去除虚线*/
-input:focus,select:focus,textarea:focus,button:focus{
+input:focus,
+select:focus,
+textarea:focus,
+button:focus {
   outline: none;
 }
+
 /*重置部分表单圆角和内阴影*/
-input[type="text"],input[type="file"],input[type="password"],input[type="search"],input[type="tel"],input[type="number"],input[type="email"],input[type="url"],textarea{
-    -webkit-appearance:none;
+input[type="text"],
+input[type="file"],
+input[type="password"],
+input[type="search"],
+input[type="tel"],
+input[type="number"],
+input[type="email"],
+input[type="url"],
+textarea {
+  -webkit-appearance: none;
 }
+
 /*去除文本框上下箭头*/
-input[type="number"]::-webkit-inner-spin-button{
-  -webkit-appearance:none;
+input[type="number"]::-webkit-inner-spin-button {
+  -webkit-appearance: none;
 }
 
 /*设置iconfont标签font-famile*/
-[class^="icon-"], [class*=" icon-"] {
-  font-family:"iconfont";
-  font-size:16px;
-  font-style:normal;
-  -webkit-font-smoothing: antialiased;
+[class^="icon-"],
+[class*=" icon-"] {
+  font-family            : "iconfont";
+  font-size              : 16px;
+  font-style             : normal;
+  -webkit-font-smoothing : antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
-a{
+
+a {
   text-decoration: none;
   /*ios禁止页面在新窗口打开*/
-  -webkit-touch-callout:none;
-  color: inherit;
+  -webkit-touch-callout: none;
+  color                : inherit;
 }
-em,i{
+
+em,
+i {
   font-style: normal;
 }
-li{
+
+li {
   list-style: none;
 }
-html,body{
+
+html,
+body {
   height: 100%;
 }
-.common-con-top{
+
+.common-con-top {
   margin-top: 88px;
 }
 
-.ellipsis{
-  overflow:hidden;
-  text-overflow:ellipsis;
-  white-space:nowrap
+.ellipsis {
+  overflow     : hidden;
+  text-overflow: ellipsis;
+  white-space  : nowrap
 }
-.iconfont{
+
+.iconfont {
   line-height: 100%;
 }
-.icon-star1{
+
+.icon-star1 {
   color: #FFC400;
 }
