--- a/src/pages/infomation/info/exclusive/exclusive.less
+++ b/src/pages/infomation/info/exclusive/exclusive.less
@@ -74,6 +74,47 @@
     }
 }
 
+//relation page
+.relation-container{
+    .search-relation{
+        margin: 30px;
+        height: 324px;
+
+        h4{
+            text-align: left;
+            
+        }
+        form{
+            margin-top: 24px;
+            text-align: center;
+            input{
+                width: 598px;
+                height: 73px;
+                border: 1px solid #4E5968;
+                opacity: 0.19;
+                border-radius: 10px;
+                font-size: 24px;
+                padding-left: 24px; 
+            }
+            p{
+                height: 38px;
+                line-height: 38px;
+                i{
+                    color: #9A9A9A;
+                    font-size: 24px;
+                }
+            }
+            .button{
+                height: 73px;
+                font-size: 28px;
+                line-height: 73px;
+            }
+        }
+
+    }
+}
+
+
 
 
 
