feat(componnent): add data
add data to basic,marks,management,fixed search bug

--- a/src/components/baseCard/BaseCard.less
+++ b/src/components/baseCard/BaseCard.less
@@ -23,6 +23,9 @@
             flex            : 1;
             font-size       : 26px;
             text-align      : left;
+            &:hover{
+                overflow: visible;
+            }
         }
 
     }
