--- a/src/components/baseList/BaseList.less
+++ b/src/components/baseList/BaseList.less
@@ -18,6 +18,12 @@
                 flex: 1;
                 min-width: 130px;
                 .ellipsis();
+                &:hover{
+                    overflow: visible;
+                }
+            }
+            span:first-child{
+                min-width: 300px;
             }
         }
         .title{
