--- a/src/components/baseList/BaseList.less
+++ b/src/components/baseList/BaseList.less
@@ -9,6 +9,7 @@
     // border-radius: 20px;
     // background: white;
     // font-size: 24px;
+    min-height: 400px;
     ul{
         overflow-x: auto;
         li{
@@ -16,14 +17,14 @@
             height: 66px;
             span{
                 flex: 1;
-                min-width: 130px;
+                min-width: 140px;
                 .ellipsis();
                 &:hover{
                     overflow: visible;
                 }
             }
             span:first-child{
-                min-width: 300px;
+                min-width: 200px;
             }
         }
         .title{
