--- a/src/styles/mixin.less
+++ b/src/styles/mixin.less
@@ -41,6 +41,7 @@
 
 
 .bg-img(@url) {
+    background-size: 100%;
     background-image: data-uri('@{url}.png');
     // background-image: data-uri('@{url}');
 
